--- a/404.md
+++ b/404.md
@@ -1,12 +1,12 @@
 ---
 layout: page
 title: "Page Not Found"
-excerpt: "Page not found. Your pixels are in another canvas."
+excerpt: "Page not found."
 sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
+Sorry, but the page you were trying to view does can't be found --- perhaps you wish to search for it?
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
