backpedal from no double quotes
changed my mind — titles and excerpts should get double quotes

--- a/_posts/2015-08-01-yans.md
+++ b/_posts/2015-08-01-yans.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: YANS
-excerpt: Another summer, another new website
+title: "YANS"
+excerpt: "Another summer, another new website"
 tags: [self-referential, website, workflow]
 date: 2015-08-01
 ---
