changed out cover
Bye, duckies.

--- a/_posts/2015-12-16-stones.md
+++ b/_posts/2015-12-16-stones.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Stones"
+title: "_Stones_"
 excerpt: "A three-image mini-project to close out Large Format Class"
 tags: [large format, class, final project, scans, black and white, photography]
 date: 2015-12-16
