updated yaml headers for ogimage

--- a/_posts/2015-09-01-toyo-time.md
+++ b/_posts/2015-09-01-toyo-time.md
@@ -4,6 +4,7 @@ title: "Toyo Time!"
 excerpt: "My companion large format camera."
 tags: [toyo, photography, large format, class]
 date: 2015-09-01
+ogimage: "/images/posts/m/2015-09-01-barbara-tozier-toyo-time.jpg"
 ---
 
 <figure class="image-m">
