--- a/_posts/2015-12-16-stones.md
+++ b/_posts/2015-12-16-stones.md
@@ -4,6 +4,7 @@ title: "_Stones_"
 excerpt: "A three-image mini-project to close out Large Format Class"
 tags: [large format, class, final project, scans, black and white, photography]
 date: 2015-12-16
+ogimage: "/images/posts/s/2015-12-07-barbara-tozier-stones-3.jpg"
 ---
 
 <figure class="image-s">
