medium image structure
BIG rearrangement to restructure the medium-sized images. Had to edit
the posts, but hopefully won't have to do it again. Until I get to the
small images I guess.

--- a/_posts_OLD/2016-04-16-big.md
+++ b/_posts_OLD/2016-04-16-big.md
@@ -28,10 +28,7 @@ After adding the text (and enhancing it with a scanned texture), I then used ano
 
 _Big_ is the largest piece I've ever made. _Big_ is also not quite ready for its own gallery, because it really needs to be photographed _in situ_. I could put the digital files in, but I'm not sure that they represent the piece well. I'm hanging the piece soon, we'll see how it goes!
 
-<figure class="image-m">
-  <img src="/images/posts/m/2016-04-11-barbara-tozier-big_scale.jpg">
-  <figcaption>
-    <span class="image-m-caption">Big (scale)</span>
-    <span class="image-m-credit">Barbara Tozier</span>
-  </figcaption>
+<figure class="image-m-fig figure">
+  <img class="image-m-img figure-img" src="/images/posts/m/2016-04-11-barbara-tozier-big_scale.jpg">
+  <figcaption class="image-m-cap figure-caption">Big (scale)</figcaption>
 </figure>
