--- a/_posts_OLD/2015-09-01-toyo-time.md
+++ b/_posts_OLD/2015-09-01-toyo-time.md
@@ -7,12 +7,9 @@ date: 2015-09-01
 ogimage: "/images/posts/m/2015-09-01-barbara-tozier-toyo-time.jpg"
 ---
 
-<figure class="image-m">
-  <img src="/images/posts/m/2015-09-01-barbara-tozier-toyo-time.jpg">
-  <figcaption>
-    <span class="image-m-caption">Toyo Field 45AII</span>
-    <span class="image-m-credit">Barbara Tozier</span>
-  </figcaption>
+<figure class="image-m-fig figure">
+  <img class="image-m-img figure-img" src="/images/posts/m/2015-09-01-barbara-tozier-toyo-time.jpg">
+  <figcaption class="image-m-cap figure-caption">Toyo Field 45AII</figcaption>
 </figure>
 
 This (Toyo Field Camera WCC #9) is going to be my companion for a little while. I'm comfortable with handling it and setting it up, but it will take a little while before I get past those "D'OH!" points, like forgetting to take the dark slide out before pressing the shutter release.
@@ -25,8 +22,8 @@ Now begins the wait... ... ... we're not going to be developing this film for tw
 
 So far, I've discovered that large format is even *more* meditative than working with medium format cameras. I suppose with practice I could get very quick at setting it up, but focusing, setting the aperture and shutter speed, and loading the film all require a certain amount of attention *and* intention.
 
-<figure class="image-m">
-  <img src="/images/posts/m/2015-09-01-simply-qee1f.jpg">
+<figure class="image-m-fig figure">
+  <img class="image-m-img figure-img" src="/images/posts/m/2015-09-01-simply-qee1f.jpg">
 </figure>
 
 Thank you, Mr Bean. You explained that quite well.
