moving posts around
Editing for the new figure method. Some have been pushed to `drafts`
because they're outdated (how I used to do images). One related to a
gallery is waiting until I redo the gallery stuff.

--- a/_posts/2015-09-01-toyo-time.md
+++ b/_posts/2015-09-01-toyo-time.md
@@ -4,13 +4,15 @@ title: "Toyo Time!"
 excerpt: "My companion large format camera."
 tags: [toyo, photography, large format, class]
 date: 2015-09-01
-ogimage: "/images/posts/m/2015-09-01-barbara-tozier-toyo-time.jpg"
+ogimage: "20150901-btozier-toyo-time.jpg"
 ---
 
-<figure class="image-m-fig figure">
-  <img class="image-m-img figure-img" src="/images/posts/m/2015-09-01-barbara-tozier-toyo-time.jpg">
-  <figcaption class="image-m-cap figure-caption">Toyo Field 45AII</figcaption>
-</figure>
+{% include _figures.html
+  base_image_filename="20150901-btozier-toyo-time.jpg"
+  title="Toyo Time!"
+  alt="A large format camera fills the image"
+  caption="Toyo Field 45AII"
+%}
 
 This (Toyo Field Camera WCC #9) is going to be my companion for a little while. I'm comfortable with handling it and setting it up, but it will take a little while before I get past those "D'OH!" points, like forgetting to take the dark slide out before pressing the shutter release.
 
@@ -22,8 +24,7 @@ Now begins the wait... ... ... we're not going to be developing this film for tw
 
 So far, I've discovered that large format is even *more* meditative than working with medium format cameras. I suppose with practice I could get very quick at setting it up, but focusing, setting the aperture and shutter speed, and loading the film all require a certain amount of attention *and* intention.
 
-<figure class="image-m-fig figure">
-  <img class="image-m-img figure-img" src="/images/posts/m/2015-09-01-simply-qee1f.jpg">
-</figure>
+![](/images/adhoc/2015-09-01-simply.jpg "Sean Bean as Boromir saying 'One does not simply make snapshots with large format'")
+{: .image-adhoc}
 
 Thank you, Mr Bean. You explained that quite well.
