--- a/_posts/2016-04-16-big.md
+++ b/_posts/2016-04-16-big.md
@@ -37,3 +37,5 @@ _Big_ is the largest piece I've ever made. _Big_ is also not quite ready for its
   alt="The piece hanging from 2 light stands. With the support it is about 7 feet wide by about 10 feet high. I'm standing in front of it for scale. I'm 5 foot 6."
   caption="The piece by itself is about 6 feet by 8 feet."
 %}
+
+View the individual segments in the [project gallery](/galleries/big/).
