forgot the excerpt

--- a/_posts/2017-05-12-glitch.md
+++ b/_posts/2017-05-12-glitch.md
@@ -2,7 +2,7 @@
 layout: post
 title: "In progress: Glitch"
 date: "2017-05-12 20:00"
-excerpt: ""
+excerpt: "A project report, including a technique for making glitch images"
 tags: [digital,glitch]
 use_gallery_img: false
 ogimage: "20170512-btozier-wire-glitch-combo.jpg"
